# lidar_stereo_calib

./: CMakeLists.txt  README.md  cam_stereo.yaml  config.yaml  package.xml
include/: calibrator.hpp  denseStereo.hpp
src/: calibrator.cpp  denseStereo.cpp  main.cpp
